--- a/style.css
+++ b/style.css
@@ -7,10 +7,11 @@ table {
     margin: 0 auto;
     border-spacing: 0;
     padding: 0;
-    color:green;
 }
 
 td {
     height: 200px;
     width: 200px;
+    text-align: center;
+    background-color: lightgreen;
 }
